# crpbot

./: .db_password  .dockerignore  .env.aws  .env.example  .gitignore  .gpu_instance_info  .pre-commit-config.yaml  .s3_bucket_name  AB_TEST_IMPLEMENTATION_STATUS.md  AGENT_COLLABORATION_WITH_Q.md  AMAZONQ_PHASE2_INSTRUCTIONS.md  AMAZON_Q_STATUS.md  AMAZON_Q_STATUS_UPDATE.md  AWS_GPU_APPROVAL_2025-11-15.md  AWS_INFRASTRUCTURE_STATUS_UPDATE.md  AWS_SETUP_CHECKLIST_2025-11-15.md  AWS_TASKS_STATUS.md  BACKTEST_RESULTS_SUMMARY.md  BUG_HANDLING_PLAN.md  BUILDER_CLAUDE_INSTRUCTIONS_2025-11-15.md  BUILDER_CLAUDE_MACHINE_RESOURCES.md  BUILDER_CLAUDE_PRODUCTION_STATUS.md  BUILDER_CLAUDE_QUESTIONS.md  BUILDER_CLAUDE_SUMMARY_2025-11-15.md  BUILDER_HANDOFF.md  BUILDER_STATUS_REPORT_20251122.md  CLAUDE.md  CLAUDE_CONTEXT_UPDATE.md  CLAUDE_MAX_INTEGRATION.md  CLAUDE_MD_IMPROVEMENTS.md  CLAUDE_ON_CLOUD_SETUP.md  CLAUDE_SYNC_UPDATE_2025-11-15.md  CLOUD_MIGRATION_SUMMARY.md  COINGECKO_PREMIUM_FEATURES_2025-11-15.md  COINGECKO_USAGE_REPORT.md  COLAB_INTEGRATION_GUIDE.md  COLAB_STEPS_FROM_DRIVE.md  COLAB_TRAINING_SCRIPT.py  COMPREHENSIVE_STATUS_UPDATE.md  CONFLICT_RESOLUTION_PLAN.md  (+195 more)
.amazon-q-templates/: cloud-builder-config.json  local-qc-config.json
.archive/ab_testing/: CRITICAL_AB_TEST_ISSUES.md
.archive/aws_training/: AWS_AUTO_TERMINATION_SUMMARY.md  AWS_COST_CLEANUP_2025-11-22.md
.archive/dashboards/: DASHBOARD_BUGS_2025-12-01.md  DASHBOARD_BUGS_VERIFICATION_2025-12-01.md  DASHBOARD_TROUBLESHOOTING.md  DASHBOARD_USAGE_INSTRUCTIONS.md  REFLEX_DASHBOARD_SETUP.md
.archive/hmas/: HMAS_V2_COMPLETE_OVERVIEW.md  HMAS_V2_DEPLOYMENT_SUMMARY.md  HMAS_V2_QUICKSTART.md
.archive/hydra_3.0/: HYDRA_3.0_IMPLEMENTATION_PLAN.md  HYDRA_3.0_IMPLEMENTATION_STEPS.md  HYDRA_3.0_PROGRESS_2025-11-29.md  HYDRA_4_ENGINE_UPGRADE_PLAN.md  HYDRA_ALL_FIXES_COMPLETE.md  HYDRA_API_KEYS_SETUP.md  HYDRA_ARCHITECTURE_REBUILD_PLAN.md  HYDRA_BUG_FIXES_2025-12-01.md  HYDRA_DEEP_SCAN_REPORT.md  HYDRA_DEPLOYMENT_GUIDE.md  HYDRA_FINAL_VERIFICATION_COMPLETE.md  HYDRA_FIXES_SUMMARY.md  HYDRA_GROK_GEMINI_INTEGRATION_SUCCESS.md  HYDRA_INTEGRATION_TEST_SUCCESS.md  HYDRA_QUICK_REFERENCE.md  HYDRA_TESTING_STATUS.md
.archive/notebooks/: colab_crpbot_evaluation.ipynb  colab_final_evaluation.ipynb  colab_verify_files.ipynb  colab_with_claude_api.ipynb
.archive/old_docs/: ADVANCED_THEORIES_COMPLETE.md  AMAZON_Q_ACCURACY_INVESTIGATION.md  AMAZON_Q_MODEL_SYNC_INSTRUCTIONS.md  AMAZON_Q_STATUS.md  AMAZON_Q_TRAINING_INSTRUCTIONS.md  AWS_COST_TRACKING.md  AWS_INFRASTRUCTURE_STATUS_UPDATE.md  AWS_SETUP_CHECKLIST_2025-11-15.md  AWS_TASKS_STATUS.md  BUILDER_ACK_QC_REVIEW.md  BUILDER_CLAUDE_SUMMARY_2025-11-15.md  BUILDER_CLAUDE_VERIFICATION_AND_NEXT_STEPS.md  CLOUD_SERVER_QUICKSTART.md  CLOUD_SERVER_SETUP.md  COINGECKO_ALTERNATIVE_USES_2025-11-15.md  COINGECKO_ANALYST_PLAN_2025-11-15.md  COINGECKO_DATA_FLOW.md  COINGECKO_INTEGRATION_SUMMARY.md  COINGECKO_UPGRADE_PLAN_ANALYSIS.md  COINGECKO_USAGE_REPORT.md  COLAB_EVALUATION.md  COLAB_INSTRUCTIONS.md  (+79 more)
.backup/: multi_tf_fetcher.py
.templates/: DOCUMENT_TEMPLATE.md  README.md
apps/: __init__.py
crpbot/: crpbot.py
docs/: AMAZON_Q_TASK_INSTRUCTIONS.md  AWS_GPU_IMPLEMENTATION_PLAN.md  AWS_GPU_TRAINING_SETUP.md  AWS_INFRASTRUCTURE_SUMMARY.md  AWS_TASKS.md  BINANCE_ALTERNATIVES.md  BUGBOT_SETUP.md  COINBASE_API_KEY_CHECK.md  COINBASE_API_KEY_FORMAT.md  COINBASE_FINAL_CHECK.md  COINBASE_JWT_SETUP.md  COINBASE_PASSPHRASE.md  COINBASE_PASSPHRASE_REQUIRED.md  COINBASE_SECRET_FORMAT.md  COINBASE_TROUBLESHOOTING.md  COINBASE_VERIFICATION.md  CREDENTIALS_CHECKLIST.md  DATA_PIPELINE_TEST_RESULTS.md  DATA_QUALITY.md  ENV_SETUP.md  EXECUTION_MODEL.md  FEATURE_ENGINEERING.md  FTMO_LIVE_TRADING.md  FTMO_SETUP.md  GITHUB_TOKEN_SETUP.md  GPU_PERFORMANCE_ANALYSIS.md  KAFKA_ARCHITECTURE.md  KAFKA_IMPLEMENTATION.md  KAFKA_SETUP.md  PHASE1_DEPLOYMENT_GUIDE.md  PHASE1_TESTING.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_5_PLAN.md  PHASE6_5_PREP_AND_PARALLEL_WORK.md  PHASE6_5_TEAM_PLAN.md  PHASE6_COMPLETE.md  PRODUCTION_ARCHITECTURE_MIGRATION.md  (+14 more)
libs/: __init__.py
monitoring/: docker-compose.yml
mt5_executor/: SETUP_GUIDE.md  executor_service.py  mt5_zmq_server.py  requirements.txt  start_executor.bat  windows_manager.py
output/: v8_results.json  v8_training_complete.json
reports/: v6_model_diagnostic.json
scripts/: README.md  analyze_backtest_results.py  analyze_losing_trades.py  archive_old_results.py  auto_terminate_after_training.sh  auto_track_signals.sh  backfill_tournament_scores.py  backtest_v7_signals.py  batch_download_coingecko.sh  check_both_environments.sh  check_download_progress.sh  check_env.py  check_paper_trading_performance.py  check_running_instances.sh  check_sync.sh  check_sync_status.sh  claude_intro.sh  cleanup_project.sh  collect_historical_data.py  collect_multi_source_data.py  create_missing_tables.py  deploy_sagemaker_training.py  deploy_to_cloud.sh  diagnose_coinbase.py  diagnose_telegram.py  diagnose_v6_model.py  diagnose_v7_model.py  download_v6_models.sh  end_session_sync.sh  engineer_50_features.py  engineer_coingecko_features.py  engineer_features.py  engineer_features_all_symbols.py  engineer_multi_tf_features.py  evaluate_model.py  export_metrics.py  fetch_coingecko_hourly.py  fetch_coingecko_metadata.py  fetch_coingecko_onchain.py  fetch_data.py  (+63 more)
tests/: __init__.py  test_config.py  test_data_pipeline.py
v3_ultimate/: 00_run_v3_ultimate.py  01b_fetch_alternative_data.py  02b_engineer_features_enhanced.py  04_backtest.py  05_export_onnx.py  API_SETUP_GUIDE.md  FINAL_DELIVERY.md  OPTION_B_ROADMAP.md  V3_Ultimate_Colab.ipynb
v4_monitoring/: BUILD_CHECKLIST.md  QUICK_START.md  README.md  requirements.txt
validation/: COMPLETE_ARCHITECTURE_VALIDATION.md  CURRENT_SYSTEM_STATUS_2025-12-02.md  FINAL_VALIDATION_SUMMARY.md  FINAL_VERIFICATION_BEFORE_MONITORING.md  FIXES_COMPLETED_2025-11-30.md  FOREX_EXPANSION_PLAN.md  HYDRA_8ASSET_DEPLOYMENT_COMPLETE.md  INDEX.md  README.md  TOURNAMENT_A_OPTIMIZATION_PLAN.md
(+527 files in other folders)
