[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]

[project]
name = "trading-ai"
version = "0.0.1"
description = "FTMO-oriented crypto signals with DL + RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0", # For parquet support
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=20.0,<21.0",
    "aiohttp>=3.9.0,<4.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "ta>=0.11.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "confluent-kafka>=2.12.2",
    "coinbase-advanced-py>=1.8.2",
    "ccxt>=4.5.19",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pre-commit>=3.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "__pycache__"
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]

