[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]

[project]
name = "trading-ai"
version = "0.0.1"
description = "FTMO-oriented crypto signals with DL + RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core runtime dependencies only (~20 packages)
    # Removed: torch, sklearn, gymnasium, matplotlib, flask (moved to optional)
    # Removed: confluent-kafka (unused), pytest (moved to dev)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=20.0,<21.0",
    "aiohttp>=3.9.0,<4.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "ta>=0.11.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "coinbase-advanced-py>=1.8.2",
    "ccxt>=4.5.19",
    "pyzmq>=25.0.0",
    "yfinance>=0.2.66",
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.5",
    "rich>=14.2.0",
    "prometheus-client>=0.23.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# ML/Training dependencies (~3.5GB) - only for apps/trainer/
trainer = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]

# Dashboard/visualization dependencies - only for apps/dashboard/
dashboard = [
    "matplotlib>=3.7.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

# Knowledge aggregation system
knowledge = [
    "praw>=7.7.0",              # Reddit API
    "beautifulsoup4>=4.12.0",   # Web scraping
    "chromadb>=0.4.0",          # Vector database
    "openai>=1.0.0",            # Embeddings
    "apscheduler>=3.10.0",      # Job scheduling
    "feedparser>=6.0.0",        # RSS feeds
]

# Development tools
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pre-commit>=3.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "__pycache__"
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]

